# VirtualDriver_CarMaker_Adapter

./: CMakeLists.txt  Readme.md  adapter_task 2.md
apps/: CMakeLists.txt
apps/adapter/: CMakeLists.txt  test_harness.cpp
apps/mock_server/: CMakeLists.txt  mock_server.cpp
documentation/: doc
include/: MockCarMakerInterface.h  SilCarMakerAdapter.h
src/: CMakeLists.txt  MockCarMakerInterface.cpp  SilCarMakerAdapter.cpp
src/protos/: sil_minimal.proto
tests/: CMakeLists.txt
